# king-chess

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: CheckDisplayServer.cmake
cmake/toolchains/: mingw64.cmake
include/: Board.h  ChessControllder.h  ChessSound.h  ChessView.h  Drawer.h  Game.h  Move.h  Observer.h  Piece.h  Types.h  UIConfig.h
src/: Board.cpp  ChessController.cpp  ChessSound.cpp  ChessView.cpp  Game.cpp  Piece.cpp  main.cpp
